Cook XP (дробный, x1.5) + удаление plantXP + F3+H тултип + чистка инспекций
Геймплей/баланс:
- готовка: XP за тир геометрически (2 * 1.5^(тир-1)), дробный; FoodCookMap и
  Farmer's Delight по единой шкале; обновлена вики промысла
- PlantTierMap: убран параметр plantXP (XP за посадку не выдаём)
- F3+H (advanced tooltip): показ всех ограничений предмета (RestrictionSystem)

Чистка по code inspection (imports / migration aids / performance / duplicates):
- удалены 11 unused imports
- Math.clamp, getFirst(), pattern variable, лямбды -> method ref
- Specialization -> record
- Collections.addAll вместо ручного копирования; addAll вместо цикла
- дедуп KRPCommand (resolveTargetPath) и PathScreen (countAvailablePaths)
- убран deprecated EventBusSubscriber.Bus

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>